samples/_failures_safe/1761707593_ef277b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_728d172e.c: In function ‘main’:
./samples/SAFE/__tmp_728d172e.c:146:37: error: expected ‘]’ at end of input
  146 |             int start = test_cases[j
      |                                     ^
      |                                     ]
./samples/SAFE/__tmp_728d172e.c:146:13: error: expected declaration or statement at end of input
  146 |             int start = test_cases[j
      |             ^~~
./samples/SAFE/__tmp_728d172e.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_728d172e.c:146:13: error: expected declaration or statement at end of input
